# aquariwm

./: .editorconfig  .gitignore  .markdownlint.yaml  .prettierrc.toml  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  index.html  publish-docs  search-index.js  settings.html
.github/: dependabot.yml  rustc-problem-matcher.json  test-problem-matcher.json
.github/workflows/: ci.yml  rust-clippy.yml  rustfmt.yml
.run/: Run AquariWM (Wayland).run.xml  Run AquariWM (X11).run.xml
.trunk/: .gitignore  trunk.yaml
bytes/: index.html  trait.Buf.html  trait.BufMut.html
bytes/buf/: struct.UninitSlice.html  trait.BufMut.html
derive-extras/: Cargo.toml
derive-extras/src/: lib.rs  numbers_to_words.rs
docs/: CNAME  crates.js  index.html  search-index.js  settings.html  source-files.js
docs/aquariwm_server/: all.html  fn.main.html  index.html  sidebar-items.js
docs/aquariwm_server/aquariwm/: index.html  sidebar-items.js  struct.AquariWm.html
docs/aquariwm_server/extensions/: index.html  sidebar-items.js  trait.ConfigWindowExtensions.html  trait.ConfigureRequestEventExtensions.html
docs/aquariwm_server/features/: index.html  sidebar-items.js
docs/aquariwm_server/util/: fn.get_geometry.html  fn.grab_manip_buttons.html  fn.init_grabs.html  fn.init_window.html  fn.set_dimensions.html  fn.set_position.html  index.html  sidebar-items.js
docs/bytes/: struct.Bytes.html  struct.BytesMut.html
docs/bytes/buf/: struct.Chain.html  struct.Limit.html  trait.Buf.html
docs/proc_macro2/: enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
docs/proc_macro2/token_stream/: index.html  struct.IntoIter.html
docs/src/ansi_term/: ansi.rs.html  debug.rs.html  difference.rs.html  display.rs.html  lib.rs.html  style.rs.html  util.rs.html  windows.rs.html  write.rs.html
docs/src/aquariwm_server/: aquariwm.rs.html  extensions.rs.html  main.rs.html  util.rs.html
docs/src/bitflags/: lib.rs.html
docs/src/bytes/: lib.rs.html
docs/src/cfg_if/: lib.rs.html
docs/src/lazy_static/: inline_lazy.rs.html  lib.rs.html
docs/src/libc/: fixed_width_ints.rs.html  lib.rs.html  macros.rs.html
docs/syn/: all.html  enum.Item.html  index.html  sidebar-items.js  struct.Ident.html  struct.ItemEnum.html  struct.ItemStruct.html  struct.ItemUnion.html
docs/tracing/: struct.Level.html  trait.Value.html
docs/tracing_subscriber/: all.html  index.html  struct.Registry.html
docs/xcb/: all.html  enum.ConnError.html  enum.Error.html  enum.Event.html  enum.Extension.html  enum.Lat1Error.html  enum.ProtocolError.html  fn.parse_display.html  index.html  macro.atoms_struct.html  sidebar-items.js  struct.AuthInfo.html  struct.Connection.html  struct.DisplayInfo.html  struct.ExtensionData.html  struct.Lat1Str.html  struct.Lat1StrF.html  struct.Lat1String.html  struct.UnknownEvent.html  struct.VoidCookie.html  struct.VoidCookieChecked.html  trait.BaseError.html  trait.BaseEvent.html  trait.Cookie.html  trait.CookieChecked.html  trait.CookieWithReplyChecked.html  trait.CookieWithReplyUnchecked.html  trait.GeEvent.html  trait.Raw.html  trait.RawRequest.html  trait.Reply.html  trait.Request.html  trait.RequestWithReply.html  trait.RequestWithoutReply.html  trait.Xid.html  trait.XidNew.html  type.ConnResult.html  type.ProtocolResult.html  type.Result.html
docs/xcb_wm/: all.html  index.html  sidebar-items.js
docs/xrb/: all.html  constant.PROTOCOL_MINOR_VERSION.html  enum.Protocol.html  enum.WinGravity.html  index.html  macro.bitmask!.html  macro.bitmask.html  macro.doc.html  macro.error.html  macro.predefine!.html  macro.predefine.html  sidebar-items.js  struct.Arc.html  struct.Host.html  struct.Rect.html  type.Button.html  type.Char2b.html  type.KeyCode.html
src/: aquariwm.rs  bindings.rs  cli.rs  display_server.rs  extensions.rs  handlers.rs  layout.rs  lib.rs  main.rs  setup.rs  state.rs  util.rs  wayland.rs  window_manipulation.rs  wrappers.rs
src/bytes/: bytes.rs.html  bytes_mut.rs.html  loom.rs.html
src/display_server/: wayland.rs  x11.rs
src/features/: desktops.rs  mod.rs  window_manipulation.rs
src/functions/: manipulation.rs  mod.rs
src/layout/: implementations.rs  managers.rs
src/util/: ewmh.rs  icccm.rs  mod.rs
src/utility/: mod.rs
src/wayland/: grabs.rs  input.rs  state.rs
src/xrb/: lib.rs.html
xrb/: constant.PROTOCOL_MAJOR_VERSION.html  enum.BitGravity.html  macro.res_id!.html  macro.res_id.html  type.KeySym.html  type.Point.html  type.String16.html  type.Timestamp.html
xrb/bitmasks/: enum.DeviceEvent.html  trait.Bitmask.html
xrb/error_handling/: enum.ReadError.html  type.GenResult.html  type.ReadResult.html  type.ReadWriteResult.html
xrb/macros/: sidebar-items.js
xrb/notifications/: index.html
xrb/queries/: index.html
xrb/requests/: index.html
xrb/serialization/: trait.Deserialize.html
(+1442 files in other folders)
