# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "aquariwm"
version = "0.1.0"
authors = ["AquariWM", "Antikyth"]
edition = "2021"
readme = true
homepage = "https://aquariwm.org/"
repository = "https://github.com/AquariWM/aquariwm"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# TODO: When compiling for release, maybe don't include the testing feature?
default = ["wayland", "x11", "testing"]

wayland = ["dep:smithay"]
x11 = ["dep:xcb", "winit?/x11"]

# NOTE: winit is provided even if x11 is not enabled, because there is no way to specify that two
#       features must be enabled for an optional dependency.
testing = ["smithay?/backend_winit", "dep:winit"]

[dependencies]
bitflags = "2.2.1"
thiserror = "1.0.50"

clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.4.4"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dependencies.xcb]
version = "1.2.2"
optional = true

[dependencies.winit]
version = "0.29.3"
default-features = false
optional = true

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
features = ["wayland_frontend", "desktop"]
optional = true
