# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "aquariwm"
version = "0.1.0"
authors = ["AquariWM", "Antikyth"]
edition = "2021"
readme = true
repository = "https://github.com/AquariWM/aquariwm"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# TODO: When compiling for release, maybe don't include the testing feature?
default = ["wayland", "x11", "testing"]

wayland = ["dep:smithay"]
x11 = ["dep:x11rb-async", "async", "winit?/x11"]

# NOTE: winit is provided even if x11 is not enabled, because there is no way to specify that two
#       features must be enabled for an optional dependency.
testing = ["smithay?/backend_winit", "dep:winit"]
# Features required for async AquariWM implementations (i.e. our X11 implementation).
async = ["dep:futures", "dep:tokio"]

[dependencies]
bitflags = "2.2.1"
thiserror = "1.0.50"

# CLI
clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.4.4"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

####################################################################################################
# Display server specific
####################################################################################################

# X11
[dependencies.x11rb-async]
version = "0.12.0"
optional = true

# Wayland
[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
features = ["wayland_frontend", "desktop"]
optional = true

####################################################################################################
# Async
####################################################################################################

[dependencies.futures]
version = "0.3.29"
optional = true

[dependencies.tokio]
version = "1.33.0"
features = ["full"]
optional = true

####################################################################################################
# Testing
####################################################################################################

[dependencies.winit]
version = "0.29.3"
default-features = false
optional = true
